Use the parent menu's font when truncating labels.

Fixes the other bug uncovered by #8829, but my other fix was valid too.